added all the pages of the website

--- a/src/Pages/Technology/Technology.css
+++ b/src/Pages/Technology/Technology.css
@@ -30,7 +30,7 @@
 
 .tech-overview{
     color: #44504E;
-    font-weight: bold;
+    font-weight: 600;
     font-size: 25px;
     line-height: 25px;
     text-transform: uppercase;
