made all pages responsive

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -31,3 +31,32 @@
 .active-link{
     background-color: #2d505f;
 }
+
+@media screen and (max-width: 1210px){
+    .header-cont{
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    
+    
+}
+
+@media screen and (max-width: 1010px){
+    .header .container{
+        width: 100%;
+    }
+
+    .header-links{
+        width: 100%;
+    }
+
+    .header-links{
+        flex-direction: column;
+        align-content: center;
+    }
+
+    .header-links a{
+        padding: 0.5rem 0;
+    }
+}
