--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -34,3 +34,10 @@
     margin: 20px 0px 20px 30px;
     text-transform: uppercase;
 }
+
+@media screen and (max-width:700px){
+    .about-para{
+        width: 100%;
+        margin-left: 0;
+    }
+}
