--- a/src/Pages/AdvisoryTeam/AdvisoryTeam.css
+++ b/src/Pages/AdvisoryTeam/AdvisoryTeam.css
@@ -35,3 +35,20 @@
     margin-left: 20%;
     width: 50%;
 }
+
+@media screen and (max-width:700px){
+    .member-name{
+        margin-left: 0;
+    }
+
+    .mem-designation{
+        margin-left: 0
+    }
+
+    .mem-desc{
+        margin-left: 0;
+        text-align: center;
+        width: 100%;
+        text-align: justify;
+    }
+}
